--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Rutina Full Body 4 Días - Adaptada al Hombro (Móvil)</title>
 <style>
-  body { font-family: Arial, sans-serif; background: #f8f9fa; margin: 0; padding: 0; color: #222; }
-  header { background: #1f2937; color: #fff; text-align: center; padding: 1.5rem 1rem; }
-  h1,h2,h3 { color: #111827; }
+ body { font-family: Arial, sans-serif; background: #f8f9fa; margin: 0; padding: 0; color: #222; }
+  header { background: #4170f0; color: #fff; text-align: center; padding: 1.5rem 1rem; }
+  h1,h2,h3 { color: #000608; }
   section { max-width: 600px; margin: 1.5rem auto; background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
   iframe { width: 100%; height: 250px; border: none; border-radius: 8px; margin: 0.5rem 0 1.2rem; }
-  .exercise { margin-bottom: 2rem; }
-  .day-title { background: #2563eb; color: white; padding: 0.5rem 0.8rem; border-radius: 8px; }
+  .exercise { margin-bottom: 1.5rem; }
+  .day-title { background: #aed307; color: white; padding: 0.5rem 0.8rem; border-radius: 8px; }
   ul { margin-top: 0.5rem; }
-  .small { font-size: 0.9rem; color: #374151; }
+  .small { font-size: 0.9rem; color: #020408; }
   label { display: block; margin: 0.3rem 0; }
   input { width: 60px; margin-left: 0.3rem; }
   button { margin-top: 0.3rem; padding: 0.3rem 0.6rem; border: none; background: #2563eb; color: white; border-radius: 6px; cursor: pointer; }
