--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <article class="exercise card">
           <div class="ex-img">
             <!-- Vídeo en español sobre remo TRX / bandas -->
-            <iframe src="https://www.youtube.com/watch?v=7cp3NUy_y4o" title="Remo - Sergio Peinado" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/7cp3NUy_y4o" title="Remo - Sergio Peinado" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Remo con banda elástica o TRX — 4×12</h3>
@@ -214,7 +214,7 @@
         <article class="exercise card">
           <div class="ex-img">
             <!-- Vídeo en español sobre elevaciones laterales (técnica segura) -->
-            <iframe src="https://www.youtube.com/watch?v=hgLpdwMtEEs" title="Elevaciones laterales - técnica" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hgLpdwMtEEs" title="Elevaciones laterales - técnica" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Elevaciones laterales suaves — 3×15</h3>
@@ -235,7 +235,7 @@
         <!-- Plancha + Bird dog -->
         <article class="exercise card">
           <div class="ex-img">
-            <iframe src="https://www.youtube.com/watch?v=Ba8iV1hJW3c" title="Plancha y Bird Dog" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Ba8iV1hJW3c" title="Plancha y Bird Dog" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Plancha + Bird dog — 3×30 seg cada uno</h3>
@@ -296,7 +296,7 @@
         <!-- Zancadas alternas -->
         <article class="exercise card">
           <div class="ex-img">
-            <iframe src="https://www.youtube.com/watch?v=XupMPKjxOOg" title="Zancadas" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/XupMPKjxOOg" title="Zancadas" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Zancadas alternas con mancuernas — 3×12 por pierna</h3>
@@ -316,7 +316,7 @@
         <!-- Press militar o sustituto -->
         <article class="exercise card">
           <div class="ex-img">
-            <iframe src="https://www.youtube.com/watch?v=96xeqjYXkT4" title="Press Militar - técnico" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/96xeqjYXkT4" title="Press Militar - técnico" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Press militar con mancuernas sentado — 3×10 (si no molesta)</h3>
@@ -374,7 +374,7 @@
         <!-- Curl y extension en superset -->
         <article class="exercise card">
           <div class="ex-img">
-            <iframe src="https://www.youtube.com/watch?v=QfW3mlTokm0" title="Curl y extensión - técnica" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/QfW3mlTokm0" title="Curl y extensión - técnica" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Superset: Curl bíceps + Extensión tríceps — 3×12</h3>
