--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <article class="exercise card">
           <div class="ex-img">
             <!-- Vídeo en español sobre press inclinado / pecho -->
-            <iframe src="https://www.youtube.com/embed/SA-SEBlgWv8" title="Press inclinado - Sergio Peinado" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/AYucUinTYrU" title="Press inclinado - Sergio Peinado" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Press de pecho con mancuernas en banco inclinado 30° — 3×12</h3>
@@ -335,7 +335,7 @@
         <!-- Remo unilateral -->
         <article class="exercise card">
           <div class="ex-img">
-            <iframe src="https://www.youtube.com/embed/SA-SEBlgWv8" title="Remo unilateral - Sergio Peinado" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/DFcND66MxJo" title="Remo unilateral - Sergio Peinado" allowfullscreen></iframe>
           </div>
           <div class="ex-body">
             <h3>Remo unilateral con mancuerna — 4×12</h3>
